--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 *.csv
+*/mlruns
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
