--- a/mlruns/.trash/253965598771480184/meta.yaml
+++ b/mlruns/.trash/253965598771480184/meta.yaml
@@ -1,6 +1,7 @@
 artifact_location: mlflow-artifacts:/253965598771480184
 creation_time: 1702763615507
 experiment_id: '253965598771480184'
-last_update_time: 1702763615507
-lifecycle_stage: active
+last_update_time: 1702771668538
+lifecycle_stage: deleted
 name: projeto
+tags: {}
